--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,11 @@ jobs:
         go-version: 1.15
       id: go
 
+    - name: Set up protoc
+      run: |
+        apt-get install -y protobuf-compiler
+        go get -v google.golang.org/protobuf/cmd/protoc-gen-go google.golang.org/grpc/cmd/protoc-gen-go-grpc
+
     - name: Check out code
       uses: actions/checkout@v2
 
