--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,7 +16,7 @@ jobs:
 
     - name: Set up protoc
       run: |
-        apt-get install -y protobuf-compiler
+        sudo apt-get install -y protobuf-compiler
         go get -v google.golang.org/protobuf/cmd/protoc-gen-go google.golang.org/grpc/cmd/protoc-gen-go-grpc
 
     - name: Check out code
