--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,11 +16,13 @@ jobs:
 
     - name: Set up protoc
       run: |
-        sudo apt-get install -y protobuf-compiler
-        go get -v google.golang.org/protobuf/cmd/protoc-gen-go google.golang.org/grpc/cmd/protoc-gen-go-grpc
+        curl -LO "https://github.com/protocolbuffers/protobuf/releases/download/v3.15.5/protoc-3.15.5-linux-x86_64.zip"
+        unzip protoc-3.15.5-linux-x86_64.zip -d $HOME/.local
 
     - name: Check out code
       uses: actions/checkout@v2
 
     - name: Lint
-      run: make lint
+      run: |
+        export PATH="$PATH:$HOME/.local/bin"
+        make lint
