--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,16 +2,16 @@ name: Build
 
 on: push
 
-jobs: 
+jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    
-    - name: Set up Go 1.15
+
+    - name: Set up Go 1.16
       uses: actions/setup-go@v2
       with:
-        go-version: 1.15
+        go-version: 1.16
       id: go
 
     - name: Set up protoc
@@ -26,4 +26,4 @@ jobs:
     - name: Build
       run: |
         export PATH="$PATH:$HOME/.local/bin"
-        make build
+        make all
