--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,10 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs:
+      - lint
+      - test
+      - build
     #if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
