--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,8 +92,6 @@ jobs:
           project_id: provindevs
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
-      - run: |
-          gcloud config set project ${{ secrets.GCP_PROJECT }}
-          docker build --tag asia.gcr.io/${{ secrets.GCP_PROJECT }}/${{ secrets.IMAGE_NAME }} .
-          gcloud auth configure-docker --quiet
-          docker push asia.gcr.io/${{ secrets.GCP_PROJECT }}/${{ secrets.IMAGE_NAME }}
+      - run: gcloud auth configure-docker --quiet
+      - run: docker build --tag ${{ secrets.IMAGE_NAME }} .
+      - run: docker push ${{ secrets.IMAGE_NAME }}
